# TeamAlpha-SquishAppDirectory

./: .gitignore  README.md  SquishAppDirectory.yaml  SquishAppFormatDemo.py
SquishAppFormat/: pyproject.toml  run_demo.sh
SquishAppFormat/squishappformat/: SquishAppFormatDemo.py
SquishAppFormat/tests/: test_squishappformat.py
